--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutterwavedev/flutterwave-v3",
-    "description": "A simple SDK for integrating to Flutterwave's Rave payment",
+    "name": "flutterwavedev/flutterwave-v3-dicorage",
+    "description": "A simple SDK for integrating to Flutterwave's Rave payment modified by Dicorage",
     "type": "library",
     "keywords": ["rave", "flutterwave", "payment", "transfers", "africa"],
     "homepage": "https://github.com/Flutterwave/Flutterwave-PHP-v3",
